--- a/sampdb-service/pom.xml
+++ b/sampdb-service/pom.xml
@@ -18,13 +18,44 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-  
+
+    <dependencyManagement>
+       <dependencies>
+           <dependency>
+               <groupId>io.spring.platform</groupId>
+               <artifactId>platform-bom</artifactId>
+               <version>1.1.2.RELEASE</version>
+               <type>pom</type>
+               <scope>import</scope>
+           </dependency>
+       </dependencies>
+	</dependencyManagement>
+	  
   <dependencies>
 	<dependency>
 	    <groupId>junit</groupId>
 	    <artifactId>junit</artifactId>
-	    <version>4.12</version>
 	    <scope>test</scope>
 	</dependency>
+	<dependency>
+		<groupId>com.rafael</groupId>
+		<artifactId>sampdb-modeljpa</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</dependency>
+	
+	<!-- Test -->
+	<dependency>
+	    <groupId>org.assertj</groupId>
+	    <artifactId>assertj-core</artifactId>
+	    <version>3.2.0</version>
+	    <scope>test</scope>
+	</dependency>
+	
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-test</artifactId>
+	    <scope>test</scope>
+	</dependency>
+	
   </dependencies>
  </project>
