--- a/sampdb-modeljpa/pom.xml
+++ b/sampdb-modeljpa/pom.xml
@@ -15,24 +15,26 @@
   
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <spring.version>5.0.4.RELEASE</spring.version>
+    <spring.data.version>2.0.5.RELEASE</spring.data.version>
   </properties>
-  
-    <dependencyManagement>
-       <dependencies>
-           <dependency>
-               <groupId>io.spring.platform</groupId>
-               <artifactId>platform-bom</artifactId>
-               <version>1.1.2.RELEASE</version>
-               <type>pom</type>
-               <scope>import</scope>
-           </dependency>
-       </dependencies>
-	</dependencyManagement>
-	 
+
+	<repositories>
+	    <repository>
+	        <id>spring-libs-release</id>
+	        <name>Spring Releases</name>
+	        <url>https://repo.spring.io/libs-release</url>
+	        <snapshots>
+	            <enabled>false</enabled>
+	        </snapshots>
+	    </repository>
+	</repositories>
+	    
   <dependencies>
 	<dependency>
 	    <groupId>junit</groupId>
 	    <artifactId>junit</artifactId>
+	    <version>4.12</version>
 	    <scope>test</scope>
 	</dependency>
 	
@@ -40,59 +42,81 @@
 	<dependency>
 	    <groupId>mysql</groupId>
 	    <artifactId>mysql-connector-java</artifactId>
+	    <version>5.1.30</version>
 	</dependency>
 	
 	<!-- DataSource -->
 	<dependency>
 	    <groupId>com.zaxxer</groupId>
 	    <artifactId>HikariCP</artifactId>
+	    <version>1.3.8</version>
 	</dependency>
 
      <!-- Spring -->
      <dependency>
          <groupId>org.springframework</groupId>
          <artifactId>spring-aspects</artifactId>
+         <version>${spring.version}</version>
      </dependency>
-     <dependency>
-         <groupId>org.springframework</groupId>
-         <artifactId>spring-context-support</artifactId>
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-context</artifactId>
+         <version>${spring.version}</version>
 	</dependency>
 	
 	<dependency>
 	    <groupId>org.hibernate</groupId>
 	    <artifactId>hibernate-entitymanager</artifactId>
+         <version>5.3.0.CR1</version>
 	</dependency>
 
 	<dependency>
 	    <groupId>org.springframework.data</groupId>
 	    <artifactId>spring-data-jpa</artifactId>
+         <version>${spring.data.version}</version>
 	</dependency>
-	 
+
+	<dependency>
+	    <groupId>org.springframework.data</groupId>
+	    <artifactId>spring-data-commons</artifactId>
+         <version>${spring.data.version}</version>
+	</dependency>
+
      <!-- Logging -->
      <dependency>
-         <groupId>org.slf4j</groupId>
-         <artifactId>slf4j-api</artifactId>
-     </dependency>
-     <dependency>
-         <groupId>log4j</groupId>
-         <artifactId>log4j</artifactId>
-     </dependency>
-     <dependency>
-         <groupId>org.slf4j</groupId>
-         <artifactId>slf4j-log4j12</artifactId>
-	</dependency>	
-	
+	       <groupId>org.slf4j</groupId>
+	       <artifactId>slf4j-api</artifactId>
+	       <version>1.7.5</version>
+	   </dependency>
+	   <dependency>
+	       <groupId>org.slf4j</groupId>
+	       <artifactId>slf4j-log4j12</artifactId>
+	       <version>1.7.5</version>
+	   </dependency>
+		<dependency>
+		    <groupId>log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		    <version>1.2.17</version>
+		</dependency>
+	   
+	<dependency>
+	    <groupId>commons-lang</groupId>
+	    <artifactId>commons-lang</artifactId>
+         <version>2.6</version>
+	</dependency>
+		
 	<!-- Test -->
 	<dependency>
 	    <groupId>org.assertj</groupId>
 	    <artifactId>assertj-core</artifactId>
-	    <version>3.2.0</version>
+	     <version>3.9.1</version>
 	    <scope>test</scope>
 	</dependency>
 	
 	<dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-test</artifactId>
+         <version>${spring.version}</version>
 	    <scope>test</scope>
 	</dependency>
 	
