--- a/sampdb-modeljpa/src/main/resources/application.properties
+++ b/sampdb-modeljpa/src/main/resources/application.properties
@@ -6,7 +6,7 @@ db.password=root
  
 #Hibernate Configuration
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-hibernate.hbm2ddl.auto=validate
+hibernate.hbm2ddl.auto=update
 hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 hibernate.show_sql=true
 hibernate.format_sql=true
